kubernetes/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoe-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shoe-backend
  template:
    metadata:
      labels:
        app: shoe-backend
    spec:
      containers:
        - name: backend
          image: mydevopsacr123.azurecr.io/backend:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
