kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoe-backend
  namespace: ${NAMESPACE}
spec:
  selector:
    app: shoe-backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
