kubernetes/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoe-backend-ingress
  namespace: ${NAMESPACE}
  annotations:
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - "${HOSTNAME}"
    secretName: microservices-tls-secret
  rules:
  - host: "${HOSTNAME}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shoe-backend
            port:
              number: 5000
